# openarm_ros2-main

./: ceshi.py
openarm_bimanual_moveit_config/config/: joint_limits.yaml
openarm_bringup/: CMakeLists.txt  README.md  package.xml
openarm_bringup/src/: move_to_xyz.cpp
openarm_hardware/: CMakeLists.txt  package.xml
openarm_hardware/1/: ceshi.py  openarm_bimanual.urdf
openarm_hardware/include/openarm_hardware/: dynamics.hpp  v10_simple_hardware.hpp
openarm_hardware/src/: dynamics.cpp  v10_simple_hardware.cpp
